<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about">About</string>
    <string name="accentcolor">Accent color</string>
    <string name="activefilelisttitlebar">Active file list: Title bar</string>
    <string name="addbookmark">Add to bookmarks</string>
    <string name="album">Album</string>
    <string name="another">Another</string>
    <string name="app_name">File manager</string>
    <string name="appearance">Appearance</string>
    <string name="apps">Apps</string>
    <string name="archive">Archive</string>
    <string name="archives">Archives</string>
    <string name="areyousuretocompressmore">Do you want to compress these items? (#$)</string>
    <string name="areyousuretocompressone">Do you want to compress #$?</string>
    <string name="areyousuretodeletemore">Are you sure to delete these items? (#$)</string>
    <string name="areyousuretodeleteone">Are you sure to delete #$?</string>
    <string name="artist">Artist</string>
    <string name="audio">Audio</string>
    <string name="auto">Auto</string>
    <string name="backgroundcolor">Background color</string>
    <string name="barcolor">Bar color</string>
    <string name="betaeditedfile">"It's a beta version of the text editor and may destroy your file. Please make a backup of the system before saving. Do you still want to save?"</string>
    <string name="betasavefile">You are trying to edit a system file</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmarkslistlist">Bookmarks list: List</string>
    <string name="bookmarkslisttitlebar">Bookmarks list: Title bar</string>
    <string name="books">Books</string>
    <string name="bottombar">Bottom bar</string>
    <string name="bydatemodified">By date modified</string>
    <string name="byextension">By extension</string>
    <string name="byname">By name</string>
    <string name="bysize">By size</string>
    <string name="calculating">Calculating...</string>
    <string name="cancel">Cancel</string>
    <string name="cancreate">The folder has been created</string>
    <string name="cannotcreate">Cannot create folder!</string>
    <string name="cannotcreatefile">Cannot create file!</string>
    <string name="cannotdelete">Cannot delete!</string>
    <string name="cannotextract">You cannot extract here</string>
    <string name="cannotgetlogs">Cannot get logs</string>
    <string name="cannotgetprice">Cannot get the price</string>
    <string name="cannotmove">You cannot move here</string>
    <string name="cannotopen">Cannot open folder!</string>
    <string name="cannotpaste">You cannot paste here</string>
    <string name="cannotrename">Cannot rename!</string>
    <string name="cannotsave">Cannot save</string>
    <string name="cannotsavelogs">Cannot save logs</string>
    <string name="cantakeminutes">It can take a while...</string>
    <string name="change">Change</string>
    <string name="choose">Choose</string>
    <string name="choosecolor">Choose color</string>
    <string name="chooseicons">Choose icons</string>
    <string name="clear">Clear</string>
    <string name="clipboardisempty">Clipboard is empty</string>
    <string name="close">Close</string>
    <string name="closeapp">Close app</string>
    <string name="closewhengethomedir">Close window using back button</string>
    <string name="closewhengethomedirsummaryoff">When get to the home page</string>
    <string name="closewhengethomedirsummaryon">When get to the home directory</string>
    <string name="closewindow">Close window</string>
    <string name="colors">Colors</string>
    <string name="compress">Compress</string>
    <string name="compressfolder">Compress folders before sending</string>
    <string name="compressing">Compressing</string>
    <string name="copiedtoclipboard">Copied to clipboard</string>
    <string name="copy">Copy</string>
    <string name="copying">Copying</string>
    <string name="copypath">Copy path</string>
    <string name="createnewfile">Create new file</string>
    <string name="createnewfolder">Create new folder</string>
    <string name="createshortcut">Create shortcut</string>
    <string name="customicons">Custom icons</string>
    <string name="customiconstext">If you want to use your own icons, just paste them into \"#$\" and call as below. Use PNG graphics size 96x96 or 128x128 (It depends on your device).</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="deletefrombookmarks">Delete from bookmarks</string>
    <string name="deleting">Deleting</string>
    <string name="detailedlist">Detailed list</string>
    <string name="details">Details</string>
    <string name="directlybacktohomepage">Use a short path for the navigation</string>
    <string name="documents">Documents</string>
    <string name="donate">Donate</string>
    <string name="donationdescription">"It doesn't matter which option you will choose, all of them will unlock all paid features"</string>
    <string name="done">Done</string>
    <string name="downloads">Downloads</string>
    <string name="doyoulikemkexplorer">Do you like MK Explorer?</string>
    <string name="duration">Duration</string>
    <string name="edit">Edit</string>
    <string name="editedfile">The file has been changed. Save?</string>
    <string name="elements">Elements:</string>
    <string name="emptyfolder">The folder is empty</string>
    <string name="error">Error!</string>
    <string name="externalmemory">External Memory</string>
    <string name="extract">Extract</string>
    <string name="extractaszip">Extract as ZIP</string>
    <string name="extracthere">Extract here</string>
    <string name="extracting">Extracting</string>
    <string name="extractq">Extract?</string>
    <string name="file">File</string>
    <string name="fileexists">A file with this name already exists</string>
    <string name="filelistlist">File list: List</string>
    <string name="filelisttitlebar">File list: Title bar</string>
    <string name="files">Files</string>
    <string name="filesandfolders">Files and folders</string>
    <string name="folders">Folders</string>
    <string name="fullfilename">Show full names of files</string>
    <string name="fullpath">Full path</string>
    <string name="general">General</string>
    <string name="generalcolors">General colors</string>
    <string name="hide">Hide</string>
    <string name="imagery">Image</string>
    <string name="inactivefilelisttitlebar">Inactive file list: Title bar</string>
    <string name="keyboardshortcuts">Keyboard shortcuts</string>
    <string name="licences">Licences</string>
    <string name="listcolor">List color</string>
    <string name="loadfolderanimation">Loading folder animation</string>
    <string name="mail">E-mail</string>
    <string name="moddate">Modified</string>
    <string name="move">Move</string>
    <string name="music1">Music</string>
    <string name="narrowactionbar">Use narrow Title Bar</string>
    <string name="navigation">Navigation</string>
    <string name="newfolder">New folder</string>
    <string name="next">Next</string>
    <string name="nextwindow">Next window</string>
    <string name="norootaccess">"You don't have root access"</string>
    <string name="numberofelements">Show the number of elements in folders</string>
    <string name="openas">Open as</string>
    <string name="openfilelocation">Show in folder</string>
    <string name="opennexttoleft">Open in the left window</string>
    <string name="other">Other</string>
    <string name="paste">Paste</string>
    <string name="pdffiles">PDF files</string>
    <string name="permissions">Permissions</string>
    <string name="pictures">Pictures</string>
    <string name="presentations">Presentations</string>
    <string name="previous">Previous</string>
    <string name="properties">Properties</string>
    <string name="rename">Rename</string>
    <string name="rootaccess">Root access</string>
    <string name="search">Search</string>
    <string name="selectall">Select all</string>
    <string name="send">Send</string>
    <string name="setashome">Set as home</string>
    <string name="show">Show</string>
    <string name="showarrowsbutton">Show navigation buttons</string>
    <string name="showclosebutton">Show close button</string>
    <string name="showrootdir">Show root directory on the home page</string>
    <string name="showthumnails">Show thumbnails</string>
    <string name="showtwowindows">Show two windows after run</string>
    <string name="showviewandsortbutton">Show view and sort buttons</string>
    <string name="size">Size</string>
    <string name="spreadsheets">Spreadsheets</string>
    <string name="styleicons">Style icons</string>
    <string name="textandiconcolor">Text and icons color</string>
    <string name="textcolor">Text color</string>
    <string name="textfiles">Text files</string>
    <string name="titlebar">Title bar</string>
    <string name="translation">English translation</string>
    <string name="translatorsname">Mateusz Kornakiewicz</string>
    <string name="type1">Type</string>
    <string name="unmount">Unmount</string>
    <string name="usedarktheme">Use dark theme for dialogs, menu etc.</string>
    <string name="version">Version</string>
    <string name="videos">Videos</string>
    <string name="yesrootaccess">You have root access</string>
    <string name="attachlogs">Attach LOGs</string>
    <string name="attachmounts">Attach \"mounts\" file</string>
    <string name="bugreportinformation">Please, describe step by step what does not work and how to recreate a bug (at least 10 characters). Write in English. I do not understand other languages and I am not going to use Google Translate. Do not send me empty messages and LOGs without description, I will ignore it.</string>
    <string name="colorednavigationbar">Colored navigation bar</string>
    <string name="ifappcrashed">If an app crashed, attach LOGs</string>
    <string name="ifmountsproblem">If you have a problem with a storages detection (for example on home page), attach \"/proc/mounts\" file</string>
    <string name="setas">Set as</string>
    <string name="setasringtone">Set as ringtone</string>
    <string name="usebottomCAB">Use bottom action bar when selecting</string>
    <string name="contact_developer_uri">mailto:v.m.kosolapov@outlook.com</string>
    <string name="desc">image</string>
    <string name="versionnr">2.5.5</string>
</resources>