<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip">
            <pl.mkexplorer.kormateusz.TextView_Roboto_Medium android:textSize="14.0sp" android:textColor="@color/darksublabel" android:gravity="center_vertical" android:id="@id/general" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/general" />
            <pl.mkexplorer.kormateusz.Properties_Icon_Element android:id="@id/directorynumbertv" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/folders" custom:subText="@string/calculating" custom:setIcon="@drawable/folder_mtd" />
            <pl.mkexplorer.kormateusz.Properties_Icon_Element android:id="@id/filenumbertv" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/files" custom:subText="@string/calculating" custom:setIcon="@drawable/noname_mtd" />
            <pl.mkexplorer.kormateusz.TextView_Roboto_Medium android:textSize="14.0sp" android:textColor="@color/darksublabel" android:gravity="center_vertical" android:id="@id/details" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/details" />
            <pl.mkexplorer.kormateusz.Properties_Icon_Element android:id="@id/appssizetv" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/apps" custom:subText="@string/calculating" custom:setIcon="@drawable/apk_mtd" />
            <pl.mkexplorer.kormateusz.Properties_Icon_Element android:id="@id/documentssizetv" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/documents" custom:subText="@string/calculating" custom:setIcon="@drawable/doc_mtd" />
            <pl.mkexplorer.kormateusz.Properties_Icon_Element android:id="@id/sheetssizetv" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/spreadsheets" custom:subText="@string/calculating" custom:setIcon="@drawable/xls_mtd" />
            <pl.mkexplorer.kormateusz.Properties_Icon_Element android:id="@id/presentationsizetv" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/presentations" custom:subText="@string/calculating" custom:setIcon="@drawable/ppt_mtd" />
            <pl.mkexplorer.kormateusz.Properties_Icon_Element android:id="@id/pdfssizetv" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/pdffiles" custom:subText="@string/calculating" custom:setIcon="@drawable/pdf_mtd" />
            <pl.mkexplorer.kormateusz.Properties_Icon_Element android:id="@id/textssizetv" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/textfiles" custom:subText="@string/calculating" custom:setIcon="@drawable/text_mtd" />
            <pl.mkexplorer.kormateusz.Properties_Icon_Element android:id="@id/imagessizetv" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/pictures" custom:subText="@string/calculating" custom:setIcon="@drawable/image_mtd" />
            <pl.mkexplorer.kormateusz.Properties_Icon_Element android:id="@id/videossizetv" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/videos" custom:subText="@string/calculating" custom:setIcon="@drawable/video_mtd" />
            <pl.mkexplorer.kormateusz.Properties_Icon_Element android:id="@id/bookssizetv" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/books" custom:subText="@string/calculating" custom:setIcon="@drawable/book_mtd" />
            <pl.mkexplorer.kormateusz.Properties_Icon_Element android:id="@id/musicsizetv" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/music1" custom:subText="@string/calculating" custom:setIcon="@drawable/music_mtd" />
            <pl.mkexplorer.kormateusz.Properties_Icon_Element android:id="@id/archivessizetv" android:layout_width="fill_parent" android:layout_height="wrap_content" custom:titleText="@string/archives" custom:subText="@string/calculating" custom:setIcon="@drawable/archive_mtd" />
            <pl.mkexplorer.kormateusz.Properties_Icon_Element android:id="@id/anothersizetv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="8.0dip" custom:titleText="@string/another" custom:subText="@string/calculating" custom:setIcon="@drawable/noname_mtd" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>